# gpt5-nyc-hackathon

./: .gitignore  LICENSE  README.md
agent-decisions/: backend-environment-instructions.md  backend-testing.md  emotion-pipeline.md  live-transcription.md  mediapipe-migration.md  realtime-conversation-screenshots.md  realtime-integration.md
backend/: .env.example  README.md  pyproject.toml  switch_model.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  dependencies.py  payments.py  routes.py
backend/app/core/: config.py
backend/app/data/: arxiv_index.json
backend/app/schemas/: auth.py  emotion.py  generative_ui.py  journal.py  note.py  payment.py  payments.py  realtime.py  research.py  tutor.py
backend/app/services/: __init__.py  auth.py  context_storage.py  emotion.py  generative_ui.py  journal.py  note.py  payment.py  payments.py  realtime.py  research.py  storage.py  transcription.py  tutor.py  vision.py
backend/docs/: realtime_agent.md
backend/tests/: conftest.py  test_auth.py  test_emotion.py  test_emotion_services.py  test_health.py  test_journal.py  test_notes.py  test_payments.py  test_realtime.py  test_research_route.py  test_research_service.py  test_tutor.py
chrome-extension/: README.md  background.ts  package.json  sidepanel.tsx
chrome-extension/contents/: frosted.tsx
extension/: README.md  manifest.json
extension/src/: content-script.js  content-styles.css
frontend/: .eslintrc.js  README.md  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LandingPage.tsx  (+5 more)
(+14 files in other folders)
